--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -25,8 +25,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <javax.servlet.version>2.5</javax.servlet.version>
-    <wicket.version>6.11.0</wicket.version>
-    <wicket-js.version>0.4.0-SNAPSHOT</wicket-js.version>
+    <slf4j.version>1.7.5</slf4j.version>
+    <wicket.version>6.16.0</wicket.version>
+    <wicket-js.version>0.4.0</wicket-js.version>
   </properties>
 
   <build>
@@ -85,6 +86,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.wicket</groupId>
+        <artifactId>wicket-util</artifactId>
+        <version>${wicket.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.wicket</groupId>
         <artifactId>wicket-extensions</artifactId>
         <version>${wicket.version}</version>
       </dependency>
@@ -92,6 +98,12 @@
         <groupId>org.rauschig</groupId>
         <artifactId>wicket-js</artifactId>
         <version>${wicket-js.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
       </dependency>
 
       <dependency>
