--- a/flex-ui-core/pom.xml
+++ b/flex-ui-core/pom.xml
@@ -15,6 +15,11 @@
 
   <name>Flex UI :: Core</name>
 
+  <properties>
+    <bundle.namespace>${project.groupId}.ui</bundle.namespace>
+    <bundle.symbolicName>${project.groupId}.ui.core</bundle.symbolicName>
+  </properties>
+
   <build>
     <resources>
       <resource>
@@ -67,21 +72,6 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>bundle-manifest</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>manifest</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <instructions>
-            <Import-Package>*</Import-Package>
-          </instructions>
-        </configuration>
       </plugin>
     </plugins>
   </build>
