--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+    <jdk.version>1.7</jdk.version>
+
+    <!-- bundle properties -->
+    <bundle.name>${project.groupId} :: ${project.artifactId} :: ${project.name}</bundle.name>
+    <bundle.symbolicName>${project.groupId}.${project.artifactId}</bundle.symbolicName>
+    <bundle.namespace>${project.groupId}.${project.artifactId}</bundle.namespace>
+
+    <!-- version declarations -->
     <javax.servlet.version>2.5</javax.servlet.version>
     <slf4j.version>1.7.5</slf4j.version>
     <wicket.version>6.16.0</wicket.version>
@@ -61,12 +69,35 @@
   </properties>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+          <version>${mvn.bundle.plugin.version}</version>
+          <extensions>true</extensions>
+          <configuration>
+            <instructions>
+              <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+              <Bundle-Name>${bundle.name}</Bundle-Name>
+              <Bundle-Version>${project.version}</Bundle-Version>
+              <Embed-Dependency>*;scope=compile|runtime;type=!pom;inline=true</Embed-Dependency>
+              <Import-Package>*;resolution:=optional</Import-Package>
+              <Export-Package>${bundle.namespace}.*;version="${project.version}"</Export-Package>
+              <Private-Package>!*</Private-Package>
+              <_include>-osgi.bnd</_include>
+            </instructions>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
         </configuration>
       </plugin>
       <plugin>
