--- a/flex-ui-fruit/pom.xml
+++ b/flex-ui-fruit/pom.xml
@@ -40,6 +40,10 @@
       <groupId>org.apache.wicket</groupId>
       <artifactId>wicket-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.wicket</groupId>
+      <artifactId>wicket-extensions</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.cdlflex</groupId>
