--- a/pom.xml
+++ b/pom.xml
@@ -82,11 +82,9 @@
               <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
               <Bundle-Name>${bundle.name}</Bundle-Name>
               <Bundle-Version>${project.version}</Bundle-Version>
-              <Embed-Dependency>*;scope=compile|runtime;type=!pom;inline=true</Embed-Dependency>
               <Import-Package>*;resolution:=optional</Import-Package>
               <Export-Package>${bundle.namespace}.*;version="${project.version}"</Export-Package>
               <Private-Package>!*</Private-Package>
-              <_include>-osgi.bnd</_include>
             </instructions>
           </configuration>
         </plugin>
@@ -146,6 +144,12 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
 
