[maven-release-plugin] prepare for next development iteration

--- a/flex-ui-examples/pom.xml
+++ b/flex-ui-examples/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>flex-ui-parent</artifactId>
     <groupId>org.cdlflex</groupId>
-    <version>0.2.0</version>
+    <version>0.3.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
