--- a/flex-ui-examples/src/main/webapp/WEB-INF/web.xml
+++ b/flex-ui-examples/src/main/webapp/WEB-INF/web.xml
@@ -15,33 +15,38 @@
 
 -->
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
 
-	<display-name>flex-ui-examples</display-name>
+  <display-name>flex-ui-examples</display-name>
 
-	<!--
-		There are three means to configure Wickets configuration mode and they 
-		are tested in the order given.
-		
-		1) A system property: -Dwicket.configuration 
-		2) servlet specific <init-param> 
-		3) context specific <context-param>
+  <!--
+    There are three means to configure Wickets configuration mode and they
+    are tested in the order given.
 
-		The value might be either "development" (reloading when templates change) or 
-		"deployment". If no configuration is found, "development" is the default. -->
+    1) A system property: -Dwicket.configuration
+    2) servlet specific <init-param>
+    3) context specific <context-param>
 
-	<filter>
-		<filter-name>wicket.flex-ui-examples</filter-name>
-		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
-		<init-param>
-			<param-name>applicationClassName</param-name>
-			<param-value>org.cdlflex.ui.FlexUiExamplesApplication</param-value>
-		</init-param>
-	</filter>
+    The value might be either "development" (reloading when templates change) or
+    "deployment". If no configuration is found, "development" is the default. -->
 
-	<filter-mapping>
-		<filter-name>wicket.flex-ui-examples</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+  <context-param>
+    <param-name>wicket.configuration</param-name>
+    <param-value>development</param-value>
+  </context-param>
+
+  <filter>
+    <filter-name>wicket.flex-ui-examples</filter-name>
+    <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+    <init-param>
+      <param-name>applicationClassName</param-name>
+      <param-value>org.cdlflex.ui.FlexUiExamplesApplication</param-value>
+    </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>wicket.flex-ui-examples</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
