Configure maven-release-plugin tagNameFormat

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
           </excludes>
         </configuration>
       </plugin>
+      <plugin>
+	<artifactId>maven-release-plugin</artifactId>
+	<configuration>
+	  <tagNameFormat>v@{project.version}</tagNameFormat>
+	</configuration>
+      </plugin>
     </plugins>
   </build>
 
