Exclude unused dependencies from jetty to reduce dependencies

--- a/flex-ui-examples/pom.xml
+++ b/flex-ui-examples/pom.xml
@@ -125,6 +125,24 @@
       <artifactId>jetty-all-server</artifactId>
       <version>${jetty.version}</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.jetty.orbit</groupId>
+          <artifactId>javax.activation</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.jetty.orbit</groupId>
+          <artifactId>javax.annotation</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.jetty.orbit</groupId>
+          <artifactId>javax.mail.glassfish</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.jetty.orbit</groupId>
+          <artifactId>javax.security.auth.message</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
