--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
             </instructions>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.eluder.coveralls</groupId>
+          <artifactId>coveralls-maven-plugin</artifactId>
+          <version>3.0.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.6</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -115,10 +125,26 @@
         </configuration>
       </plugin>
       <plugin>
-	<artifactId>maven-release-plugin</artifactId>
-	<configuration>
-	  <tagNameFormat>v@{project.version}</tagNameFormat>
-	</configuration>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+        </configuration>
+      </plugin>
+
+      <!-- cobertura and coveralls plugins are used to submit coverage reports to https://coveralls.io) -->
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <configuration>
+          <format>xml</format>
+          <maxmem>256m</maxmem>
+          <aggregate>true</aggregate>
+          <check />
+        </configuration>
       </plugin>
     </plugins>
   </build>
