--- a/flex-ui-examples/pom.xml
+++ b/flex-ui-examples/pom.xml
@@ -129,6 +129,10 @@
 
     <dependency>
       <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
     </dependency>
 
