--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <groupId>org.cdlflex</groupId>
   <artifactId>flex-ui-parent</artifactId>
-  <version>0.4.0-SNAPSHOT</version>
+  <version>0.4.0</version>
 
   <name>Flex UI :: Parent</name>
 
