--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <module>flex-ui-core</module>
     <module>flex-ui-fruit</module>
     <module>flex-ui-examples</module>
+    <module>flex-ui-features</module>
   </modules>
 
   <licenses>
@@ -66,6 +67,7 @@
     <slf4j.version>1.7.5</slf4j.version>
     <wicket.version>6.16.0</wicket.version>
     <wicket-js.version>0.4.0</wicket-js.version>
+    <jackson.version>2.2.0</jackson.version>
   </properties>
 
   <build>
