--- a/flex-ui-examples/pom.xml
+++ b/flex-ui-examples/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>flex-ui-parent</artifactId>
     <groupId>org.cdlflex</groupId>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.7.1</version>
     <relativePath>..</relativePath>
   </parent>
 
