--- a/flex-ui-core/pom.xml
+++ b/flex-ui-core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.cdlflex</groupId>
     <artifactId>flex-ui-parent</artifactId>
-    <version>0.7.1</version>
+    <version>0.8.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
