Activated autoVersionSubmodules for maven-release-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <tagNameFormat>v@{project.version}</tagNameFormat>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
 
